# lib/api-server.js
@@ -62,7 +62,6 @@ let server = restify.createServer({
     'application/json': restify.formatters['application/json; q=0.4'],
     'application/javascript': restify.formatters['application/json; q=0.4'],
     'text/html': restify.formatters['application/json; q=0.4'],
-    'text/plain': restify.formatters['application/json; q=0.4'],
     'application/octet-stream': restify.formatters['application/json; q=0.4']
   }
 })
@@ -241,6 +240,10 @@ async function startAsync () {
   server.post({ path: '/verify', version: '1.0.0' }, ensureInSync, apiVerify.postProofsForVerificationV1Async)
   // get the block object for the calendar at the specified height
   server.get({ path: '/calendar/:height', version: '1.0.0' }, ensureInSync, apiCalendar.getCalBlockByHeightV1Async)
+  // get the block hash for the calendar at the specified height
+  server.get({ path: '/calendar/:height/hash', version: '1.0.0' }, ensureInSync, apiCalendar.getCalBlockHashByHeightV1Async)
+  // get the block data value for the calendar at the specified height
+  server.get({ path: '/calendar/:height/data', version: '1.0.0' }, ensureInSync, apiCalendar.getCalBlockDataByHeightV1Async)
   // get configuration information for this Node
   server.get({ path: '/config', version: '1.0.0' }, apiConfig.getConfigInfoV1Async)
   // teapot
@@ -257,6 +260,7 @@ module.exports = {
     apiProofs.setRedis(redisClient)
     apiConfig.setRedis(redisClient)
     apiVerify.setRedis(redisClient)
+    apiCalendar.setRedis(redisClient)
   },
   setHmacKey: (hmacKey) => {
     apiHashes.setHmacKey(hmacKey)
