# lib/endpoints/calendar.js
@@ -14,6 +14,13 @@
 const _ = require('lodash')
 const errors = require('restify-errors')
 const calendarBlock = require('../models/CalendarBlock.js').CalendarBlock
+const coreHosts = require('../core-hosts.js')
+
+// The redis connection used for all redis communication
+// This value is set once the connection has been established
+let redis = null
+let blockHashKeyPrefix = 'BlockHashKey'
+let blockDataKeyPrefix = 'BlockData'
 
 /**
  * GET /calendar/:height handler
@@ -45,6 +52,141 @@ async function getCalBlockByHeightV1Async (req, res, next) {
   }
 }
 
+/**
+ * GET /calendar/:height/hash handler
+ *
+ * Expects a path parameter 'height' as an integer
+ *
+ * Returns hash for calendar block by calendar height
+ */
+async function getCalBlockHashByHeightV1Async (req, res, next) {
+  res.contentType = 'application/json'
+
+  let height = parseInt(req.params.height, 10)
+
+  // ensure that :height is an integer
+  if (!_.isInteger(height) || height < 0) {
+    return next(new errors.InvalidArgumentError('Invalid height, must be a positive integer'))
+  }
+
+  try {
+    let hash = await getRedisValueForKeyAsync(`${blockHashKeyPrefix}-${height}`)
+    if (!hash) {
+      let block = await calendarBlock.findOne({ where: { id: height }, attributes: ['hash'] })
+      if (block) {
+        hash = block.hash
+      } else {
+        hash = await getBlockHashFromCoreByHeightAsync(height)
+      }
+      await setRedisValueForKeyAsync(`${blockHashKeyPrefix}-${height}`, hash, 1440)
+    }
+
+    res.contentType = 'text/plain'
+    res.cache('public', { maxAge: 2592000 })
+    res.send(hash)
+    return next()
+  } catch (error) {
+    return next(new errors.InternalError('Node internal error retrieving Calendar block by height'))
+  }
+}
+
+/**
+ * GET /calendar/:height/data handler
+ *
+ * Expects a path parameter 'height' as an integer
+ *
+ * Returns data value for calendar block by calendar height
+ */
+async function getCalBlockDataByHeightV1Async (req, res, next) {
+  res.contentType = 'application/json'
+
+  let height = parseInt(req.params.height, 10)
+
+  // ensure that :height is an integer
+  if (!_.isInteger(height) || height < 0) {
+    return next(new errors.InvalidArgumentError('Invalid height, must be a positive integer'))
+  }
+
+  try {
+    let dataVal = await getRedisValueForKeyAsync(`${blockDataKeyPrefix}-${height}`)
+    if (!dataVal) {
+      let block = await calendarBlock.findOne({ where: { id: height }, attributes: ['dataVal'] })
+      if (block) {
+        dataVal = block.dataVal
+      } else {
+        dataVal = await getBlockDataFromCoreByHeightAsync(height)
+      }
+      await setRedisValueForKeyAsync(`${blockDataKeyPrefix}-${height}`, dataVal, 1440)
+    }
+
+    res.contentType = 'text/plain'
+    res.cache('public', { maxAge: 2592000 })
+    res.send(dataVal)
+    return next()
+  } catch (error) {
+    return next(new errors.InternalError('Node internal error retrieving Calendar block by height'))
+  }
+}
+
+async function getBlockHashFromCoreByHeightAsync (height) {
+  let options = {
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    method: 'GET',
+    uri: `/calendar/${height}/hash`,
+    json: true,
+    gzip: true,
+    resolveWithFullResponse: true
+  }
+
+  let response = await coreHosts.coreRequestAsync(options)
+
+  return response
+}
+
+async function getBlockDataFromCoreByHeightAsync (height) {
+  let options = {
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    method: 'GET',
+    uri: `/calendar/${height}/data`,
+    json: true,
+    gzip: true,
+    resolveWithFullResponse: true
+  }
+
+  let response = await coreHosts.coreRequestAsync(options)
+  console.log(response)
+
+  return response
+}
+
+async function getRedisValueForKeyAsync (key) {
+  let hash
+  try {
+    hash = await redis.getAsync(key)
+  } catch (error) {
+    return null
+  }
+  return hash
+}
+
+async function setRedisValueForKeyAsync (key, value, expireMinutes) {
+  try {
+    await redis.setAsync(key, value, 'EX', expireMinutes * 60)
+  } catch (error) {
+    return null
+  }
+}
+
 module.exports = {
-  getCalBlockByHeightV1Async: getCalBlockByHeightV1Async
+  getCalBlockByHeightV1Async: getCalBlockByHeightV1Async,
+  getCalBlockHashByHeightV1Async: getCalBlockHashByHeightV1Async,
+  getCalBlockDataByHeightV1Async: getCalBlockDataByHeightV1Async,
+  setRedis: (redisClient) => {
+    coreHosts.setRedis(redisClient)
+    redis = redisClient
+  }
 }
